Fix GIFs uploaded as attachments not showing static version

--- a/webapp/channels/src/sass/responsive/_mobile.scss
+++ b/webapp/channels/src/sass/responsive/_mobile.scss
@@ -2000,7 +2000,7 @@
     .file-view--single {
         .file__image {
             .image-loaded {
-                img {
+                img, canvas {
                     max-width: 100%;
                 }
             }
